--- a/advanced-topics/custom-styles.adoc
+++ b/advanced-topics/custom-styles.adoc
@@ -436,7 +436,7 @@ Be sure to look at the draw count at the top left, which is an honest and consta
 There's a tiny little bit more to do, though; our shaders above were created assuming that there's always a texture to read data from.
 However, the style might also be assigned to a mesh that doesn't use any texture, so we have to write some specific code for that case (which is so simple I'm not going to elaborate on it right now).
 
-The complete class, including this last-minute fix, can be found here: https://git.io/v9OtC[ColorOffsetStyle.as].
+The complete class, including this last-minute fix, can be found here: https://gist.github.com/joshtynjala/275aeeb5014e5e7a2d2573182e98c29d[ColorOffsetStyle.hx].
 
 === Where to go from here
 
